<resources>
    <string name="app_name">Win Trade</string>
    <string name="on_boarding_button_text_title">Продолжить</string>
    <string name="traders_title_menu_title">Трейдеры</string>
    <string name="my_profile_title">Мой профиль</string>
    <string name="invite_a_friend_menu_title">Пригласить друга</string>
    <string name="about_service_menu_title">О сервисе</string>
    <string name="ask_a_question_menu_title">Задать вопрос</string>
    <string name="settings_menu_title">Настройки</string>
    <string name="exit_menu_title">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btn_next_title">Продолжить</string>
    <string name="accept_rules">Я принимаю <a href="https://www.google.com/">Правила</a> и <a href="https://www.google.com/">Условия компании</a></string>
    <string name="accept_privacy">Я принимаю к сведению, что предоставляемая мною информация будет использоватся в соответствии с документами <a href="https://www.google.com/">Политика конфеденциальности</a> и <a href="https://www.google.com/">Порядок использования файлов cookie</a></string>
    <string name="captcha">Данный сайт защищен системой reCAPTCHA. Действуют Политика конфеденциальности и Условия предоставления услуг Google</string>
    <string name="create_profile_title">Создать учетную запись</string>
    <string name="nickname">Никнейм</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="phone">Телефон</string>
    <string name="create_profile_btn">Создать профиль</string>
    <string name="sms_confirm_title">Подтверждение номера телефона по смс</string>
    <string name="sms_confirm_input">Введите код из смс</string>
    <string name="confirm_btn">Подтвердить</string>
    <string name="sms_resend_btn">Отправить смс еще раз</string>
    <string name="sms_not_received">НЕ ПРИШЛО СМС?</string>
    <string name="entrance_text_view_1_title">Войти</string>
    <string name="entrance_text_input_edit_text_user_name_hint_title">Имя пользователя</string>
    <string name="enter_button_title">Войти</string>
    <string name="enter_with_google_button_title">Войти с Google</string>
    <string name="enter_with_facebook_button_title">Войти с Facebook</string>
    <string name="entrance_text_view_3_title">Нет учетной записи?</string>
    <string name="registration_button_title">Зарегистрироваться</string>
    <string name="entrance_text_view_2_title">ИЛИ</string>
    <string name="traders_text_view_1_title">С наибольшим числом\n последователей (за последний год)</string>
    <string name="traders_text_view_2_title">Стань популярным трейдером!\n Больше последователей - больше прибыль!</string>
    <string name="show_all">Показать всех</string>
    <string name="filter">Фильтр</string>
    <string name="default_notification_channel_id" translatable="false">win_trade_channel</string>
    <string name="join">Присоединиться</string>
    <string name="followers">Последователи</string>
    <string name="profitability">Доходность</string>
    <string name="year_2021">2021</string>
    <string name="year_2022">2022</string>
    <string name="january">Январь</string>
    <string name="july">Июль</string>
    <string name="february">Февраль</string>
    <string name="august">Август</string>
    <string name="march">Март</string>
    <string name="september">Сентябрь</string>
    <string name="april">Апрель</string>
    <string name="october">Октябрь</string>
    <string name="may">Май</string>
    <string name="november">Ноябрь</string>
    <string name="june">Июнь</string>
    <string name="december">Декабрь</string>
    <string name="weekly_deals">Сделки за неделю</string>
    <string name="average_profitability_of_the_deal">Средняя доходность сделки</string>
    <string name="average_trade_duration">Средняя продолжительность сделки</string>
    <string name="registration_date">Дата регистрации</string>
    <string name="attached_post_title">создать закрепленную запись</string>
    <string name="coming_soon">В разработке</string>
    <string name="edit_profile">Заполнить\n профиль</string>
    <string name="subscription">Подписка</string>
    <string name="trader">Трейдер</string>
    <string name="type_of_transaction">Тип операции</string>
    <string name="name">Наименование</string>
    <string name="ticker">Тикер</string>
    <string name="price">Цена</string>
    <string name="quantity">Количество, шт</string>
    <string name="sum">Сумма</string>
    <string name="date_time">Дата/время</string>
    <string name="detail">Подробнее…</string>
    <string name="purchase">Покупка</string>
    <string name="date">Дата</string>
    <string name="isSubscribe">Уже подписаны</string>
    <string name="great_treader">Великий Трейдер</string>
    <string name="deals">Сделки</string>
    <string name="orders">Ордера</string>
    <string name="journal">Журнал</string>
    <string name="publication">Публикации</string>
    <string name="trader_news_header_title">Поделитесь новостями, идеями или комментарием</string>
    <string name="create_post_hint">"Поделитесь своими мыслями. Используйте \$ для инструментов или # для новости"</string>
    <string name="show">показать</string>
    <string name="comment_on">Комментировать</string>
    <string name="text">Текст</string>
    <string name="my_deals">Мои сделки</string>
    <string name="shares">Акции</string>
    <string name="sale_of_securities">Продажа акций</string>
    <string name="nickname_too_short">Ник слишком короткий</string>
    <string name="nickname_too_long">Ник слишком длинный</string>
    <string name="nickname_only_eng_and_digits">Разрешены только латинские буквы и цифры</string>
    <string name="nickname_already_exists">Пользователь с таким ником уже существует</string>
    <string name="password_too_short">Пароль слишком короткий</string>
    <string name="password_no_up_low_case_digits">Пароль должен содержать цифру, заглавную и строчную буквы</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="email_incorrect">Некорректный email</string>
    <string name="email_already_exists">Пользователь с такой почтой уже зарегистрирован</string>
    <string name="phone_incorrect">Некорректный номер</string>
    <string name="phone_already_exists">Пользователь с таким номером уже зарегистрирован</string>
    <string name="regulations_accept">Вы не приняли Правила, Условия компании и Политику конфиденциальности</string>
    <string name="is_success_registration">Пользоавтель успешно зарегестрирован, ссылка на активацию отправлена на указанную Вами почту.</string>
    <string name="new_publication">Новая публикация</string>
    <string name="publication_header_text">Расскажите о себе и своей успешной стратегии</string>
    <string name="load_file">загрузить файл</string>
    <string name="do_publication">Опубликовать</string>
    <string name="only_eng_digits">(только латинские буквы и цифры)</string>
    <string name="create_password_helper_text">(от 8 символов, обязательно цифры и прописные и строчные буквы)</string>
    <string name="share">Поделиться</string>
    <string name="create">Созать</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="trader_post_not_auth_text">НОВОСТИ и ИДЕИ от профессионального трейдера.</string>
    <string name="trader_post_not_auth_text_2">Для просмотра и комментирования необходимо</string>
    <string name="or">или</string>
    <string name="trader_pop_instr_not_auth_text">ЧАСТО ТОРГУЕМЫЕ БУМАГИ - доля сделок с прибылью и средний размер прибыли и убытка для 3 наиболее популярных бумаг (по количеству проведенных сделок)</string>
    <string name="trader_pop_instr_not_auth_text_2">Для просмотра необходимо</string>
    <string name="trader_trade_not_auth_text">СДЕЛКИ И ОРДЕРА онлайн с установленными тейк-профит и стоп-лосс. Комментарии по сделкам.</string>
    <string name="trader_trade_not_auth_text_2">Для просмотра и получения уведомлений необходимо</string>
    <string name="community">Сообщество</string>
    <string name="observation">Наблюдение</string>
    <string name="ok">OK</string>
    <string name="is_success_reg">Успешная регистрация</string>
    <string name="error">Ошибка</string>
    <string name="send">Отправить</string>
    <string name="reset_pass_btn_title">Забыли пароль?</string>
    <string name="reset_pass_email_not_registred">Такой почты не зарегестрировано</string>
    <string name="reset_pass_success">Для восстановления доступа перейдите по ссылке, отправленной на указанную электронную почту</string>
    <string name="hide">скрыть</string>
    <string name="reset_pass_text">Введите e-mail, который вводили при регистрации учетной записи в WinTrade. Мы отправим Вам ссылку к странице, через которую Вы сможете восстановить пароль.</string>
    <string name="operation">Операция</string>
    <string name="e_mail_quastion">E-mail для связи</string>
    <string name="question_success">Ваш вопрос отправлен в службу поддержки, ответ будет отправлен на указанный Вами e-mail</string>
    <string name="question_too_long">Вопрос слишком длинный</string>
    <string name="question_too_short">Вы забыли написать вопрос</string>
    <string name="fill_the_profile">Заполнить профиль</string>
    <string name="filling_information_1"> \t\tВаши персональные данные будут обработаны с целью создания профиля трейдера в соответствии с нормативно-правовыми требованиями.</string>
    <string name="filling_information_2">Хранение данных будет осуществляться с соблюдением правил конфиденциальности. </string>
    <string name="filling_information_3">После завершения верификации профиля будет предоставлена возможность: </string>
    <string name="filling_information_4">в один клик загружать сделки из своего торгового терминала </string>
    <string name="filling_information_5">писать комментарии к своим сделкам </string>
    <string name="filling_information_6">размещать новости и/или оставлять комментарии к новстям </string>
    <string name="filling_information_7">формировать сообщество последователей для монетизации</string>
    <string name="filling_information_8"> \t\tЭта информация должна совпадать с данными вашего удостоверения личности или паспорта</string>
    <string name="filling_information_name">\tИмя</string>
    <string name="filling_information_surname">\tФамилия</string>
    <string name="filling_information_lastname">\tОтчество</string>
    <string name="filling_information_button">Продолжить</string>
    <string name="filling_information_sex">Пол</string>
    <string name="filling_information_male">Муж</string>
    <string name="filling_information_female">Жен</string>
    <string name="filling_information_birthday">День рождения</string>
    <string name="filling_information_address">Адрес</string>
    <string name="filling_information_street">\tУлица</string>
    <string name="filling_information_city">\tГород</string>
    <string name="filling_information_num">\t№</string>
    <string name="filling_information_day">ДД</string>
    <string name="filling_information_month">ММ</string>
    <string name="filling_information_year">ГГГГ</string>
    <string name="filling_your_profile">Ваш профиль</string>
    <string name="filling_your_address">Ваш адрес</string>
    <string name="filling_your_country">Страна проживания</string>
    <string name="filling_your_living_country">Это страна моего проживания</string>
    <string name="filling_passport_number">Номер паспорта</string>
    <string name="filling_this_number_is_supposed">Этот номер должен относится к стране вашего гражданства</string>
    <string name="filling_choose_tariff_plan">Выберите тарифный план для своих последователей</string>
    <string name="dot">dot</string>
    <string name="top_with_shadow">top with shadow</string>
</resources>