<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/filling_your_profile"
        android:textColor="#858585"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CloseButtonSecond"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#F4FBFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/close"
        app:iconGravity="top"
        app:iconTint="#7E7E7E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="21dp"
        android:text="@string/filling_information_8"
        android:textColor="#858585"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/filling_information_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:text="@string/filling_information_sex"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWidth2" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/filling_information_birthday"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <EditText
        android:id="@+id/etWidth1"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/border"
        android:hint="@string/filling_information_name"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"></EditText>

    <EditText
        android:id="@+id/etWidth"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:hint="@string/filling_information_lastname"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"></EditText>

    <EditText
        android:id="@+id/etWidth2"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/border"
        android:hint="@string/filling_information_surname"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/etWidth"
        app:layout_constraintStart_toStartOf="@+id/etWidth1"
        app:layout_constraintTop_toTopOf="@+id/etWidth1"></EditText>

    <EditText
        android:id="@+id/etWidth4"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:hint="@string/filling_information_day"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"></EditText>

    <EditText
        android:id="@+id/etWidth5"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:hint="@string/filling_information_month"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etWidth6"
        app:layout_constraintStart_toEndOf="@+id/etWidth4"
        app:layout_constraintTop_toBottomOf="@+id/textView19"></EditText>

    <EditText
        android:id="@+id/etWidth6"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:hint="@string/filling_information_year"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"></EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#FFFFFF"
        android:focusable="auto"
        android:text="@string/filling_information_male"
        android:textColor="#C0C0C0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/button3"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#FFFFFF"
        android:focusable="auto"
        android:text="@string/filling_information_female"
        android:textColor="#C0C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

</androidx.constraintlayout.widget.ConstraintLayout>